syntax = "proto3";

package com.epam.trainning.grpc.protocols;

option java_package = "com.epam.trainning.grpc.protocols";
option java_multiple_files = true;

service UserService {
  rpc getUserDetails(UserRequest) returns (UserResponse);
}

message UserRequest {
  string username = 1;
}

message UserResponse {
  int32 id = 1;
  string username = 2;
  string name = 3;
  Gender gender = 4;
  int32 age = 5;
}

enum Gender {
  MALE = 0;
  FEMALE = 1;
  OTHER = 2;
}